--- a/popup.html
+++ b/popup.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="popup.css">
+    <link rel="stylesheet" href="assets/stylesheets/popup.css">
     <!-- Materialize -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
 </head>
 <body>
-
 <div class="switch">
     <label>
         Cacher les films sans séance aujourd'hui
@@ -16,6 +15,6 @@
         <span class="lever"></span>
     </label>
 </div>
-<script type="text/javascript" src="popup.js"></script>
+<script type="text/javascript" src="assets/js/popup.js"></script>
 </body>
 </html>
