add from button

--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" href="assets/stylesheets/popup.css">
-    <!-- Materialize -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.1/css/materialize.min.css">
 </head>
 <body>
 <div class="switch">
@@ -17,7 +15,7 @@
 </div>
 <p>Heure de diffusion</p>
 
-<div class="row">
+<div class="row valign-wrapper">
     <label class="col s4 offset-s4" for="fromButton">à partir de :</label>
     <input type="time" id="fromButton" class="right-align col s4">
 </div>
