--- a/popup.html
+++ b/popup.html
@@ -19,6 +19,11 @@
     <label class="col s4 offset-s4" for="fromButton">à partir de :</label>
     <input type="time" id="fromButton" class="right-align col s4">
 </div>
+<div class="row valign-wrapper">
+    <label class="col s4 offset-s4" for="toButton">jusque :</label>
+    <input type="time" id="toButton" class="right-align col s4">
+</div>
+<div id="error_message" style="display : none;">erreur</div>
 <script type="text/javascript" src="assets/js/popup.js"></script>
 </body>
 </html>
