V2 : big refactoring and time filters added

--- a/popup.html
+++ b/popup.html
@@ -3,27 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="assets/stylesheets/popup.css">
+    <link rel="stylesheet" href="assets/css/popup.css">
 </head>
 <body>
 <div class="switch">
     <label>
-        Cacher les films sans séance aujourd'hui
-        <input type="checkbox" id="unShowedButton">
+        Activer les filtres
+        <input type="checkbox" id="activeFilters">
         <span class="lever"></span>
     </label>
 </div>
-<p>Heure de diffusion</p>
+<div id="allFilters">
+    <div class="switch">
+        <label>
+            Cacher les films sans séance aujourd'hui
+            <input type="checkbox" id="displayUnShowedButton">
+            <span class="lever"></span>
+        </label>
+    </div>
+    <p>Début du film</p>
 
-<div class="row valign-wrapper">
-    <label class="col s4 offset-s4" for="fromButton">à partir de :</label>
-    <input type="time" id="fromButton" class="right-align col s4">
+    <div class="row valign-wrapper">
+        <label class="col s4 offset-s4" for="fromButton">entre :</label>
+        <input type="time" id="fromButton" class="right-align col s4">
+    </div>
+    <div class="row valign-wrapper">
+        <label class="col s4 offset-s4" for="toButton">et :</label>
+        <input type="time" id="toButton" class="right-align col s4">
+    </div>
+    <div id="error_message" style="display : none;">erreur</div>
 </div>
-<div class="row valign-wrapper">
-    <label class="col s4 offset-s4" for="toButton">jusque :</label>
-    <input type="time" id="toButton" class="right-align col s4">
-</div>
-<div id="error_message" style="display : none;">erreur</div>
 <script type="text/javascript" src="assets/js/popup.js"></script>
 </body>
 </html>
